Fix Two XSS Vulnerabilities
Unescaped  page names (in 'edit' an 'new' views).
Unsanitized HTTP_CLIENT_IP header.

git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@534 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/edit.rhtml
+++ b/app/views/wiki/edit.rhtml
@@ -1,5 +1,5 @@
 <% 
-  @title = "Editing #{@page.name}"
+  @title = "Editing #{CGI.escapeHTML(@page.name)}"
   @content_width = 720
   @hide_navigation = true
 %>
